--- a/index.html
+++ b/index.html
@@ -11,23 +11,22 @@
 
     <header>
 
-        <!-- Logo -->
-
-        <a href="">WEBSTUDIO</a>
-
         <!-- Navigation -->
 
         <nav>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+11(000)1111111">+11 (000) 111-11-11</a></li>
-        </ul>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
     </header>
 
     <main>
@@ -42,6 +41,7 @@
         <!-- Our strengths -->
 
         <section>
+            <h2 hidden>Strengths</h2>
             <ul>
                 <Li>
                     <h3>Strategy</h3>
@@ -80,22 +80,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="/images/1.jpg" alt="man with a beard" width="264" height="260">
+                    <img src="./images/1.jpg" alt="man with a beard" width="264" height="260">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/2.jpg" alt="young man" width="264" height="260">
+                    <img src="./images/2.jpg" alt="young man" width="264" height="260">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/3.jpg" alt="young woman" width="264" height="260">
+                    <img src="./images/3.jpg" alt="young woman" width="264" height="260">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/4.jpg" alt="man with bristle" width="264" height="260">
+                    <img src="./images/4.jpg" alt="man with bristle" width="264" height="260">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -107,7 +107,7 @@
     <!-- Footer -->
 
     <footer>
-        <a href="">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
